--- a/main/webapp/index.html
+++ b/main/webapp/index.html
@@ -28,6 +28,11 @@
                     <input id="load-more-button" type="button" value="load more" />
                 </div>
             </div>
+            <hr>
+            <div id="mazes-wrapper" class="row">
+                <div id="mazes-error-div" class="col-xs-12">
+                </div>
+            </div>
         </div>
     </body>
 </html>
